[gd_scene load_steps=11 format=3 uid="uid://qfkkvl5he35u"]

[ext_resource type="Script" path="res://code/enemies/bat_enemy.gd" id="1_7clfl"]
[ext_resource type="Texture2D" uid="uid://b8jjbmb458k6o" path="res://art/batsprite.png" id="1_qsbx5"]
[ext_resource type="PackedScene" uid="uid://vr6ikbrw81ea" path="res://damage_hitbox.tscn" id="3_en6x0"]
[ext_resource type="Script" path="res://code/util/DamageHurtbox.gd" id="4_gbhmx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wung3"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rfpaw"]
atlas = ExtResource("1_qsbx5")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iud7"]
atlas = ExtResource("1_qsbx5")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifb08"]
atlas = ExtResource("1_qsbx5")
region = Rect2(50, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_7syht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfpaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iud7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifb08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iud7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv3mk"]
size = Vector2(20, 11)

[node name="BatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 9
collision_mask = 13
script = ExtResource("1_7clfl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wung3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_7syht")
frame_progress = 0.650904

[node name="Flying" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="DamageHitbox" parent="." groups=["enemy_attack"] instance=ExtResource("3_en6x0")]
position = Vector2(0, -3)
scale = Vector2(0.747814, 0.246393)
collision_layer = 8
collision_mask = 8

[node name="DamageHurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("4_gbhmx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHurtbox"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_kv3mk")

[connection signal="timeout" from="Flying" to="." method="_on_flying_timeout"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="damage_received" from="DamageHurtbox" to="." method="_on_damage_hurtbox_damage_received"]
